# USPSTF-collection

./: .gitignore  KOInfoPage.html  Procfile  README.MD  launch.html  local_manifest.json  manifest.json  requirements.txt
USPSTF-high-body-mass-index/: README.md  deployment.yaml  metadata.json  pyproject.toml  service.yaml
USPSTF-high-body-mass-index/uspstf_high_body_mass_index/: knowledge.py
USPSTF-high-body-mass-index/uspstf_high_body_mass_index/activator_service/: activator-service.py
USPSTF-high-body-mass-index/uspstf_high_body_mass_index/cli_service/: cli-service.py
abdominal-aortic-aneurysm-screening/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
abdominal-aortic-aneurysm-screening/abdominal_aortic_aneurysm_screening/: __init__.py  abdominal_aortic_aneurysm_screening.py  knowledge.py
abdominal-aortic-aneurysm-screening/abdominal_aortic_aneurysm_screening/activator_service/: activator-service.py
abdominal-aortic-aneurysm-screening/abdominal_aortic_aneurysm_screening/cli_service/: cli-service.py  cli_service.py
abdominal-aortic-aneurysm-screening/tests/: test_knowledge.py  test_resources.py
cardiovascular-prevention-diet-activity/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
cardiovascular-prevention-diet-activity/cardiovascular_prevention_diet_activity/: __init__.py  cardiovascular_prevention_diet_activity.py  knowledge.py
cardiovascular-prevention-diet-activity/cardiovascular_prevention_diet_activity/activator_service/: activator-service.py
cardiovascular-prevention-diet-activity/cardiovascular_prevention_diet_activity/cli_service/: cli-service.py
cardiovascular-prevention-diet-activity/tests/: test_knowledge.py  test_resources.py
cardiovascular-prevention-statin-use/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
cardiovascular-prevention-statin-use/cardiovascular_prevention_statin_use/: __init__.py  cardiovascular_prevention_statin_use.py  knowledge.py
cardiovascular-prevention-statin-use/tests/: test_knowledge.py  test_resources.py
cardiovascular_prevention_statin_use/: metadata.json  pyproject.toml  service.yaml
cardiovascular_prevention_statin_use/cardiovascular_prevention_statin_use/cli_service/: cli-service.py
cardiovascular_prevention_statin_use/tests/: test_knowledge.py
demo/: README.md  index.html
demo/EpicPatientFacingDemoApp/: README.md
demo/EpicPatientFacingDemoApp/sdk_demo/: app.py
demo/SDK-and-KB-use-comparison/demo-noSDK-noKnowledgebase/: pyproject.toml
demo/SDK-and-KB-use-comparison/demo-noSDK-noKnowledgebase/demo/: app.py
demo/SDK-and-KB-use-comparison/demo-noSDK-withKnowledgebase/: pyproject.toml
demo/SDK-and-KB-use-comparison/demo-noSDK-withKnowledgebase/demo/: app.py
demo/SDK-and-KB-use-comparison/knowledgebase-withSDK/: README.md  metadata.json  pyproject.toml
demo/SDK-and-KB-use-comparison/knowledgebase-withoutSDK/: metadata.json  pyproject.toml
demo/SDK-and-KB-use-comparison/knowledgebase-withoutSDK/uspstf_knowledgebase/: __init__.py  knowledgebase.py
demo/demo-noSDK-withKnowledgebase/: README.md
demo/sdk_demo/: pyproject.toml
demo/sdk_demo/sdk_demo/: Procfile  app.py
demo/sdk_demo/sdk_demo/templates/: app.html  index.html  index1.html  launch.html
diabetes-screening/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
diabetes-screening/diabetes_screening/: __init__.py  diabetes_screening.py  knowledge.py
diabetes-screening/diabetes_screening/activator_service/: activator-service.py
diabetes-screening/diabetes_screening/cli_service/: cli-service.py
diabetes-screening/tests/: test_knowledge.py  test_resources.py
high-body-mass-index/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
high-body-mass-index/high_body_mass_index/: __init__.py  high_body_mass_index.py  knowledge.py
high-body-mass-index/high_body_mass_index/activator_service/: activator-service.py
high-body-mass-index/high_body_mass_index/cli_service/: cli-service.py  cli_service.py
high-body-mass-index/tests/: test_knowledge.py  test_resources.py
hypertension-screening/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
hypertension-screening/hypertension_screening/: ExtendedKo.py  __init__.py  hypertension_screening.py  knowledge.py
hypertension-screening/hypertension_screening/activator_service/: activator-service.py  activator_service.py
hypertension-screening/hypertension_screening/api_service/: api.py
hypertension-screening/hypertension_screening/cli_service/: cli_service.py
hypertension-screening/tests/: test_knowledge.py  test_resources.py
pregnancy-healthy-weight-gain/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
pregnancy-healthy-weight-gain/pregnancy_healthy_weight_gain/: __init__.py  knowledge.py  pregnancy_healthy_weight_gain.py
pregnancy-healthy-weight-gain/pregnancy_healthy_weight_gain/activator_service/: activator-service.py
pregnancy-healthy-weight-gain/pregnancy_healthy_weight_gain/cli_service/: cli_service.py
pregnancy-healthy-weight-gain/tests/: test_knowledge.py  test_resources.py
prevent-obesity-morbidity-mortality/: README.md  deployment.yaml  index.html  metadata.json  pyproject.toml  service.yaml
prevent-obesity-morbidity-mortality/prevent_obesity_morbidity_mortality/: __init__.py  knowledge.py  prevent_obesity_morbidity_mortality.py
prevent-obesity-morbidity-mortality/prevent_obesity_morbidity_mortality/activator_service/: activator-service.py
prevent-obesity-morbidity-mortality/prevent_obesity_morbidity_mortality/cli_service/: cli_service.py
prevent-obesity-morbidity-mortality/tests/: test_knowledge.py  test_resources.py
statin_use_prevention_cardiovascular/: README.md  deployment.yaml  metadata.json  pyproject.toml  service.yaml
statin_use_prevention_cardiovascular/statin_use_prevention_cardiovascular/: knowledge.py
statin_use_prevention_cardiovascular/tests/: test_knowledge.py
(+9 files in other folders)
