[tool.poetry]
name = "abdominal-aortic-aneurysm-screening"
version = "1.1"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid = {path = "/home/faridsei/dev/code/python-sdk/dist/kgrid-0.2.3-py3-none-any.whl", extras = ["api"]}

[tool.poetry.scripts]
abdominal-aortic-aneurysm-screening = "abdominal_aortic_aneurysm_screening.abdominal_aortic_aneurysm_screening:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
