[tool.poetry]
name = "abdominal-aortic-aneurysm-screening"
version = "1.3"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

include = ["metadata.json"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid-sdk = {version = "^0.0.2", extras = ["api"]}

[tool.poetry.scripts]
abdominal-aortic-aneurysm-screening = "abdominal_aortic_aneurysm_screening.abdominal_aortic_aneurysm_screening:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
