[tool.poetry]
name = "cardiovascular-prevention-statin-use"
version = "1.8"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "cardiovascular_prevention_statin_use" },
    { include = "metadata.json", from = ".", to = "cardiovascular_prevention_statin_use" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid-sdk = {version = "^1.1", extras = ["api"]}

[tool.poetry.scripts]
cardiovascular-prevention-statin-use = "cardiovascular_prevention_statin_use.cardiovascular_prevention_statin_use:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
