[tool.poetry]
name = "diabetes-screening"
version = "1.2"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid = {url = "https://github.com/kgrid/python-sdk/raw/refs/heads/main/dist/kgrid-0.2.3-py3-none-any.whl", extras = ["api"]}

[tool.poetry.scripts]
diabetes-screening = "diabetes_screening.diabetes_screening:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
