[tool.poetry]
name = "diabetes-screening"
version = "1.5"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "diabetes_screening" },
    { include = "metadata.json", from = ".", to = "diabetes_screening" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid-sdk = {version = "^0.0.4", extras = ["api"]}

[tool.poetry.scripts]
diabetes-screening = "diabetes_screening.diabetes_screening:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
