[tool.poetry]
name = "pregnancy-healthy-weight-gain"
version = "1.2"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid = {url = "https://github.com/kgrid/python-sdk/raw/refs/heads/main/dist/kgrid-0.2.4-py3-none-any.whl"}

[tool.poetry.scripts]
pregnancy-healthy-weight-gain = "pregnancy_healthy_weight_gain.pregnancy_healthy_weight_gain:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
