[tool.poetry]
name = "pregnancy-healthy-weight-gain"
version = "1.3"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

include = ["metadata.json"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid-sdk = "^0.0.4"

[tool.poetry.scripts]
pregnancy-healthy-weight-gain = "pregnancy_healthy_weight_gain.pregnancy_healthy_weight_gain:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
