[tool.poetry]
name = "prevent-obesity-morbidity-mortality"
version = "1.2"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

include = ["metadata.json"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid = {url = "https://github.com/kgrid/python-sdk/raw/refs/heads/main/dist/kgrid-0.2.3-py3-none-any.whl"}

[tool.poetry.scripts]
prevent-obesity-morbidity-mortality = "prevent_obesity_morbidity_mortality.prevent_obesity_morbidity_mortality:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
