[tool.poetry]
name = "prevent-obesity-morbidity-mortality"
version = "1.4"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"

include = ["metadata.json"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
kgrid-sdk = "^0.0.4"

[tool.poetry.scripts]
prevent-obesity-morbidity-mortality = "prevent_obesity_morbidity_mortality.prevent_obesity_morbidity_mortality:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
