[tool.poetry]
name = "sdk-demo"
version = "0.1.0"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
pregnancy-healthy-weight-gain = {path = "/home/faridsei/dev/code/USPSTF-collection/pregnancy-healthy-weight-gain/dist/pregnancy_healthy_weight_gain-1.6-py3-none-any.whl"}
uspstf-knowledgebase = {path = "/home/faridsei/dev/test/USPSTF-knowledgebase/dist/uspstf_knowledgebase-0.1.6-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
