[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Farid Seifi <farid.seifi@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
prevent-obesity-morbidity-mortality = {url = "https://github.com/kgrid-objects/USPSTF-collection/raw/refs/heads/main/prevent-obesity-morbidity-mortality/dist/prevent_obesity_morbidity_mortality-1.9-py3-none-any.whl"}
pregnancy-healthy-weight-gain = {url = "https://github.com/kgrid-objects/USPSTF-collection/raw/refs/heads/main/pregnancy-healthy-weight-gain/dist/pregnancy_healthy_weight_gain-1.8-py3-none-any.whl"}
uspstf-knowledgebase = {path = "/home/faridsei/dev/test/USPSTF-knowledgebase-noSDK/dist/uspstf_knowledgebase-0.1.12-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
